// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchForm > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="inner">
    <div class="inputField input"><label class="label visually-hidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
      <!--v-if-->
    </div><button class="iconButton button button" type="submit">
      <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,search" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Login </span>
    </button>
  </div>
</form>"
`;

exports[`SearchForm > when form is valid > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="inner">
    <div class="inputField input"><label class="label visually-hidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="Query">
      <!--v-if-->
    </div><button class="iconButton button button" type="submit">
      <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,search" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Login </span>
    </button>
  </div>
</form>"
`;
